--- a/Index.html
+++ b/Index.html
@@ -2,29 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FastTools - Free Online Tools</title>
+  <title>Free Online Tools – Smart & Fast</title>
+  <meta name="description" content="Free online tools: word counter, character counter, text tools, password generator and more. Fast, simple and secure.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- AdSense placeholder (أضفه لاحقًا بعد القبول) -->
+  <!--
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  -->
 </head>
+
 <body>
 
-<h1>FastTools</h1>
-<p>Free Online Tools</p>
+  <!-- HEADER -->
+  <header>
+    <h1>Free Online Tools</h1>
+    <p>Smart • Fast • Free</p>
+  </header>
 
-<textarea id="text" placeholder="Write text here..."></textarea>
+  <!-- MAIN TOOL -->
+  <main>
+    <textarea id="textInput" placeholder="Paste or type your text here..."></textarea>
 
-<div class="buttons">
-  <button onclick="countWords()">Word Count</button>
-  <button onclick="countChars()">Character Count</button>
-  <button onclick="reverseText()">Reverse Text</button>
-  <button onclick="removeSpaces()">Remove Extra Spaces</button>
-  <button onclick="toUpper()">UPPERCASE</button>
-  <button onclick="toLower()">lowercase</button>
-  <button onclick="generatePassword()">Generate Password</button>
-</div>
+    <!-- BUTTONS -->
+    <div class="buttons">
+      <button onclick="countWords()">Word Count</button>
+      <button onclick="countChars()">Character Count</button>
+      <button onclick="reverseText()">Reverse Text</button>
+      <button onclick="removeSpaces()">Remove Extra Spaces</button>
+      <button onclick="toUpper()">UPPERCASE</button>
+      <button onclick="toLower()">lowercase</button>
+      <button onclick="generatePassword()">Generate Password</button>
+    </div>
 
-<p id="result"></p>
+    <!-- RESULT -->
+    <div id="result"></div>
+  </main>
 
-<script src="script.js"></script>
-</body>
-</html>
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Free Online Tools. All rights reserved.</p
+                                                       
 
